--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Implementation of an e-commerce to understand the main problems with this type of app. ",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node build/index.js",
+    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arrudacaio/e-commerce.git"
-  },
+  "repository": "git+https://github.com/arrudacaio/e-commerce.git",
   "keywords": [
     "e-commerce"
   ],
@@ -25,5 +25,10 @@
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
   }
 }
