--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
-version: '3'
+version: '3.1'
 
 
 services: 
+  image: postgres:14-alpine
+  restart: always
+  ports: 
+    - 5432:5432
+  environment: 
+    POSTGRES_PASSWORD: ${DB_PASSWORD}
+
+
