--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
-version: '3.1'
+version: '3.9'
 
+services:
+  pg-database: 
+    image: postgres:14-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+     - data:/var/lib/postgresql/data
 
-services: 
-  image: postgres:14-alpine
-  restart: always
-  ports: 
-    - 5432:5432
-  environment: 
-    POSTGRES_PASSWORD: ${DB_PASSWORD}
+  pg-admin:
+    image: dpage/pgadmin4:6
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=admin@email.com
+      - PGADMIN_DEFAULT_PASSWORD=12345
+      - PGADMIN_LISTEN_PORT=5050
 
+    ports:
+     - "5050:5050"
 
+volumes: 
+  data: 
