--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.1"
   },
   "devDependencies": {
+    "@types/module-alias": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.11",
     "ts-node-dev": "^1.1.8",
