--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
     "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src ./test --ext .ts",
+    "lint:fix": "eslint ./src ./test --ext .ts --fix"
   },
   "repository": "git+https://github.com/arrudacaio/e-commerce.git",
   "keywords": [
@@ -28,9 +30,12 @@
     "moment": "^2.29.1"
   },
   "devDependencies": {
-    "@types/module-alias": "^2.0.1",
     "@types/express": "^4.17.13",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^16.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   }
