--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
     "test:functional": "jest --projects ./test --runInBand",
     "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'"
   },
   "repository": "git+https://github.com/arrudacaio/e-commerce.git",
   "keywords": [
@@ -40,6 +42,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.4.0",
     "jest": "^27.4.3",
+    "prettier": "^2.5.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node-dev": "^1.1.8",
